--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ DB_PORT=3306
 # DB_BASE=albion-affliate
 
 #PRO
-DB_HOST=15.207.89.217
-DB_USER=affiliate 
-DB_PASS=Affiliate@2024
-DB_BASE=affiliate
+DB_HOST=52.66.18.208
+DB_USER=madhan
+DB_PASS=123
+DB_BASE=mano
 
 #GMAIL CREDENTIALS
 MAIL_HOST="smtp.gmail.com"
